<resources>
    <string name="app_name">MovieVRI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vito Rizki Imanda</string>
    <string name="nav_header_subtitle">vitorizkiimanda@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="preferences">Preferences</string>
    <string name="settings">Settings</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Up Coming</string>
    <string name="search_button_word">SEARCH</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">release date</string>
    <string name="movie_descripton">movie descripton</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">No Favourite Movie</string>
    <string name="appwidget_text">Favourite Movie</string>
    <string name="daily_title">Whats New?</string>
    <string name="daily_text">Check out latest movies!</string>
    <string name="subtext">Sub text</string>
    <string name="release_today_msg">movie just released</string>
    <string name="lang_title">Language</string>
    <string name="summary_lang">Select Language</string>
    <string name="lang">Language</string>
    <string name="key_lang">key_lang</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="key_today_reminder">key_today_reminder</string>
    <string name="summary_daily_reminder">You will reveiced daily reminder every 7 AM</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="key_release_reminder">key_release_reminder</string>
    <string name="summary_release_reminder">You will receive daily movie release info every 8 AM</string>
    <string name="release_reminder">New Movie Reminder</string>
</resources>
