<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nowPlaying"
            android:icon="@drawable/ic_play_arrow_black_24dp"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_upComing"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/up_coming" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/favourite" />
    </group>

    <item android:title="@string/preferences">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
